...
            pick: pick,
          )
        : await Navigator.of(context).push<String>(
            MaterialPageRoute(
              fullscreenDialog: true,
              builder: (_) => LoginPage(
                title: 'Sign in with MyAnimeList',
                url: url,
                pick: pick,
              ),
            ),
          );
    if (code == null || code.isEmpty) return;
...
